--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,3 +4,6 @@ compatibility_date = "2025-11-13"
 
 [assets]
 directory = "./dist"
+
+[vars]
+ZOOM_OAUTH_REDIRECT_URI = "https://recordingmgmt.itcontact-521.workers.dev/zoom/callback"
